BhProgram の実行時エントリポイントを表示する機能を追加した